# rmbg-video

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-activity-report.lock.yml  daily-activity-report.md  publish.yml  python-publish.yml
openspec/: config.yaml
openspec/changes/archive/2026-05-29-gradio-web-interface/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-29-gradio-web-interface/specs/queue-management/: spec.md
openspec/changes/archive/2026-05-29-gradio-web-interface/specs/web-interface/: spec.md
openspec/changes/archive/2026-05-29-rmbg-video-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-29-rmbg-video-cli/specs/video-encoding/: spec.md
openspec/changes/archive/2026-05-29-rmbg-video-cli/specs/video-processing/: spec.md
openspec/changes/archive/2026-06-01-cancel-processing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-01-cancel-processing/specs/cancel-processing/: spec.md
openspec/changes/archive/2026-06-02-add-frames-zip-download/: design.md  proposal.md  tasks.md
openspec/specs/frames-zip-download/: spec.md
rmbg_video/: __init__.py  __main__.py  cli.py  web.py
tests/: test_rmbg_video.py  test_web.py
