[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rmbg-video"
version = "1.0.6"
description = "绿幕视频背景扣除 CLI 工具 — 使用 rembg AI 模型逐帧去除视频背景，输出带透明通道的 VP8 WebM 视频"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "jjg"}
]
keywords = ["rembg", "video", "background-removal", "green-screen", "webm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "rembg>=0.2",
    "numpy>=1.20",
    "tqdm>=4.60",
    "onnxruntime-gpu>=1.12",
    "gradio>=5.0",
]

[project.scripts]
rmbg-video = "rmbg_video.cli:main"
rmbg-video-web = "rmbg_video.web:main"

[project.urls]
Homepage = "https://github.com/jijinggang/rmbg-video"
Repository = "https://github.com/jijinggang/rmbg-video"

[tool.setuptools.packages.find]
include = ["rmbg_video*"]

[tool.setuptools.package-data]
rmbg_video = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
